# painmatrix

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LANGUAGE_AFFINITY.md  LICENSE  README.md  README_CN.md  SKILL.md  _decode.py  _doc_data.b64  _doc_hex.txt  _meta.json  _v610.b64  _write_doc.py  api_server.py  check_sync.ps1  compare_sync.ps1  emotion_view.html  emotion_view_pixel.html  emotion_view_pixel_merged.html  gen_v61.py  install.py  kill_restart.ps1  openclaw_integration.py  pain_state_writer.py  painmatrix.py  poll_state.ps1  push_docs.py  pyproject.toml  requirements.txt  restart_api.bat  setup.md  skill.json  start.bat  start.sh  test_behavioral.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: README_CN.md  README_EN.md
tests/: test_pain_system.py
